<resources>
    <string name="app_name">Team Blocks</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="error_login_other">There was an issue with login, please retry later.</string>

    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="menu_quick_match">Quick match</string>
    <string name="menu_invite_friends">Invite friends</string>
    <string name="menu_view_invitations">Invitations</string>
    <string name="menu_highscore">Highscore</string>

    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">You scored %1$d points!</string>

    <string name="quit_game_title">Quit Game</string>
    <string name="quit_game_message">Quit the current game?</string>
    <string name="quit_game_action_quit">Quit</string>

    <string name="error_connection_lost_title">Connection lost</string>
    <string name="error_connection_lost_message">Sorry, but the connection to the game has been lost. Did another player leave the game?</string>

    <string name="error_msg_not_delivered_title">Connection Error</string>
    <string name="error_msg_not_delivered_message">Sorry, but there seems to be a problem with your network connection, please retry later!</string>

    <string name="tutorial_1">Your blocks are blue</string>
    <string name="tutorial_2">Your friend\'s blocks are yellow</string>
    <string name="tutorial_3">When blue and yellow overlap they turn green</string>
    <string name="tutorial_4">Only green lines disappear, so work together!</string>

    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="settings_credits">Credits</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_logout">Logout</string>

    <string name="share_title">Share via</string>
    <string name="share_subject">Team Blocks</string>
    <string name="share_message">Hey, check out Team Blocks, a classical blocks game with a multiplayer twist https://play.google.com/store/apps/details?id=org.faudroids.doublestacks</string>

    <string name="about_version">Version %1$s</string>
    <string name="about_title">About</string>
    <string name="about_msg">
        This app was developed as part of the Android Challenge: one app every month for one year
        (think of it as a New Year\'s resolution). Team Blocks is our project for May.&lt;br/&gt;
        &lt;br/&gt;
        If you want to know more be sure to check out our &lt;a href=&quot;http://faudroids.org&quot;&gt;website&lt;/a&gt;.
        This app is &lt;b&gt;open source&lt;/b&gt; and you can find everything on &lt;a href=&quot;https://github.com/FauDroids/DoubleStacks&quot;&gt;GitHub&lt;/a&gt;.&lt;br/&gt;
        &lt;br/&gt;
        We would love to hear from you! Send us an &lt;a href=&quot;mailto:ideas@faudroids.org&quot;&gt;email&lt;/a&gt; and let us know what you think!&lt;br/&gt;
        &lt;br/&gt;
        The developers are&lt;br/&gt;
        &lt;br/&gt;
        Philipp Eichhorn&lt;br/&gt;
        Simon Hofmann&lt;br/&gt;
        Julia Schottenhamml&lt;br/&gt;
        Richard Baumann&lt;br/&gt;
        &lt;br/&gt;
        Happy coding!
    </string>
    <string name="credits_title">Credits</string>
    <string name="credits_msg">
        This app is being powered by a number of small and large &lt;b&gt;open source projects&lt;/b&gt;
        which all together have made this project happen. We couldn\'t have done this without them.
        To those fellow developers out there spending their part time creating those libraries:
        you guys are awesome, keep on rocking!&lt;br&gt;
        &lt;br&gt;
        The libraries in use are:&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://github.com/JakeWharton/timber&quot;&gt;Timber&lt;/a&gt; by Jake Wharton&lt;br&gt;
        &lt;a href=&quot;https://github.com/roboguice/roboguice&quot;&gt;RoboGuice&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://developer.android.com/google/play-services/index.html&quot;&gt;Google Play Services&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://source.android.com/&quot;&gt;Android Open Source Project&lt;/a&gt; by Google Inc. and the Open Handset Alliance&lt;br&gt;
        &lt;br&gt;
        &lt;br&gt;
        Thanks everyone!
    </string>
    <string name="feedback_title" translatable="false">Feedback</string>
    <string name="feedback_msg">
        We would love to hear from you!
        &lt;br&gt;
        &lt;br&gt;
        Team Blocks is still in a very early stage and we need your help to determine if you enjoyed the app
        or what improvements need to be done.
        &lt;br&gt;
        &lt;br&gt;
        So please consider heading over to the PlayStore and let uns know what you think!
    </string>
    <string name="feedback_ok">Rate Team Blocks</string>
    <string name="feedback_cancel">No thanks</string>

</resources>
