<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button_quick_game"
            android:text="@string/menu_quick_match"
            style="@style/MenuButton"
            />

        <Button
            android:id="@+id/button_invite"
            android:text="@string/menu_invite_friends"
            style="@style/MenuButton"
            />

        <Button
            android:id="@+id/button_view_invitations"
            android:text="@string/menu_view_invitations"
            style="@style/MenuButton"
            />

        <Button
            android:id="@+id/button_settings"
            android:text="@string/menu_settings"
            style="@style/MenuButton"
            />

    </LinearLayout>

</RelativeLayout>
